# ourRecipes

./: .gitignore  Pipfile  README.md  TODO  gunicorn_config.py  requirements.txt  setup.cfg
flask_API/: db.json  db.sqlite  example.json  main.py  test.py
flask_API/dynamoDB/: config.py  controller.py  models.py
flask_API/lib/: ingredientsConstants.py  nutritionCalculator.py
src/flask/: main.py
src/flask/dynamoDB/: controller.py  sample.json
src/flask_server/: .gitignore  Pipfile  data_extraction.py  etl_dynamo_to_s3.py  main.py  pyproject.toml  requirements.txt  setup.cfg
src/flask_server/dynamoDB/: Recipes_schema.json  config.py  controller.py  spoonacularCaller.py  tokenBlacklisting.py
src/flask_server/lib/: ingredientsConstants.py  nutritionCalculator.py
src/flask_server/recipe_recommendation/: Recipes.json  Recipes_csv_modelling.txt  data_extraction.ipynb  data_preparation.ipynb  foo.json  input_modeling.txt  output_modeling.txt  recipes.csv  recipes_modeling.txt  recommend_model.py  train_model.ipynb  train_model.py
src/flask_server/recipe_recommendation/utils/: data_io.py  dynamo_preprocessing.py  nutrition_funcs.py
src/react_client/: README.md  package-lock.json  package.json
src/react_client/src/: App.js  config.json  index.css  index.js
src/react_client/src/components/: cookingMethod.jsx  customer.jsx  data.js  ingredientsList.jsx  ingredientsSearch.jsx  ingredientsSearchList.jsx  loginForm.jsx  movieForm.jsx  navBar.jsx  planner.jsx  recipeForm.jsx  recipes.jsx  recipesTable.jsx  registerForm.jsx  (+1 more)
tests/: test_calculate_nutrition.py
(+96 files in other folders)
