[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_server"
version = "0.0.1"
authors = [
	{name="Nguyen Quang Khoi", email="delvo1919@gmail.com"},
]
description = "flask server"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vnminh24/ourRecipes"

